workshop address work shifted to workshop controller and removed workshopaddresses controller
