# routes/api.php
@@ -51,7 +51,9 @@ Route::group(['middleware' => 'conf_guard:Workshop'], function(){
 		Route::post('completeprofile', 'WorkshopsController@completeprofileinfo');
 		Route::get('getWorkshop/{id}', 'WorkshopsController@getWorkshop');
 		Route::patch('updateProfile/{id}', 'WorkshopsController@profileUpdate');
-		Route::resource('address', 'WorkshopAddressesController');
+		// Route::resource('address', 'WorkshopAddressesController');
+		Route::get('address/{workshop_id}', 'WorkshopsController@workshopaddress');
+		Route::patch('update-address/{workshop_id}', 'WorkshopsController@updateAddress');
 		Route::post('deleteWorkshopService/{workshop_id}/{service_id}','WorkshopsController@unassignService');		
 		Route::get('workshopServices/{workshop_id}','WorkshopsController@allWorkshopServices');
 		Route::post('createbooking','BookingsController@createBooking');
